@@ -956,7 +956,16 @@ namespace ibis {
 	<< *(yysemantic_stack_[(6) - (3)].stringVal) << ", " << *(yysemantic_stack_[(6) - (5)].stringVal) << ")";
 #endif
     ibis::math::variable *var = new ibis::math::variable((yysemantic_stack_[(6) - (3)].stringVal)->c_str());
-    var->addDecoration((yysemantic_stack_[(6) - (1)].stringVal)->c_str(), (yysemantic_stack_[(6) - (5)].stringVal)->c_str());
+    if (stricmp((yysemantic_stack_[(6) - (1)].stringVal)->c_str(), "FORMAT_UNIXTIME_LOCAL") == 0 ||
+        stricmp((yysemantic_stack_[(6) - (1)].stringVal)->c_str(), "FORMAT_UNIXTIME_GMT") == 0 ||
+        stricmp((yysemantic_stack_[(6) - (1)].stringVal)->c_str(), "FORMAT_UNIXTIME") == 0) {
+        var->addDecoration((yysemantic_stack_[(6) - (1)].stringVal)->c_str(), (yysemantic_stack_[(6) - (5)].stringVal)->c_str());
+    }
+    else {
+        LOGGER(ibis::gVerbose >= 0)
+            << "Warning -- unknown directive for formating unix time stamps \""
+            << *(yysemantic_stack_[(6) - (1)].stringVal) << "\", it will be ignored";
+    }
     (yyval.selectNode) = var;
     delete (yysemantic_stack_[(6) - (1)].stringVal);
     delete (yysemantic_stack_[(6) - (3)].stringVal);
@@ -966,7 +975,7 @@ namespace ibis {
 
   case 22:
 /* Line 664 of lalr1.cc  */
-#line 461 "selectParser.yy"
+#line 470 "selectParser.yy"
     {
     /* two-arugment math functions */
 #if defined(DEBUG) && DEBUG + 0 > 1
@@ -1054,7 +1063,7 @@ namespace ibis {
 
   case 23:
 /* Line 664 of lalr1.cc  */
-#line 475 "selectParser.yy"
+#line 484 "selectParser.yy"
     {
 #if defined(DEBUG) && DEBUG + 0 > 1
     LOGGER(ibis::gVerbose >= 0)
@@ -1069,7 +1078,7 @@ namespace ibis {
 
   case 24:
 /* Line 664 of lalr1.cc  */
-#line 485 "selectParser.yy"
+#line 494 "selectParser.yy"
     {
     (yyval.selectNode) = (yysemantic_stack_[(2) - (2)].selectNode);
 }
@@ -1077,7 +1086,7 @@ namespace ibis {
 
   case 25:
 /* Line 664 of lalr1.cc  */
-#line 488 "selectParser.yy"
+#line 497 "selectParser.yy"
     {
     (yyval.selectNode) = (yysemantic_stack_[(3) - (2)].selectNode);
 }
@@ -1085,7 +1094,7 @@ namespace ibis {
 
   case 26:
 /* Line 664 of lalr1.cc  */
-#line 491 "selectParser.yy"
+#line 500 "selectParser.yy"
     {
 #if defined(DEBUG) && DEBUG + 0 > 1
     LOGGER(ibis::gVerbose >= 0)
@@ -1098,7 +1107,7 @@ namespace ibis {
 
   case 27:
 /* Line 664 of lalr1.cc  */
-#line 499 "selectParser.yy"
+#line 508 "selectParser.yy"
     {
 #if defined(DEBUG) && DEBUG + 0 > 1
     LOGGER(ibis::gVerbose >= 0)
@@ -1111,7 +1120,7 @@ namespace ibis {
 
   case 28:
 /* Line 664 of lalr1.cc  */
-#line 507 "selectParser.yy"
+#line 516 "selectParser.yy"
     {
 #if defined(DEBUG) && DEBUG + 0 > 1
     LOGGER(ibis::gVerbose >= 0)
@@ -1123,7 +1132,7 @@ namespace ibis {
 
 
 /* Line 664 of lalr1.cc  */
-#line 1058 "selectParser.cc"
+#line 1067 "selectParser.cc"
       default:
         break;
       }
@@ -1591,7 +1600,7 @@ namespace ibis {
   {
          0,    76,    76,    76,    77,    80,    83,    87,    91,    95,
      102,   114,   126,   138,   150,   162,   174,   186,   198,   217,
-     421,   445,   461,   475,   485,   488,   491,   499,   507
+     421,   445,   470,   484,   494,   497,   500,   508,   516
   };
 
   // Print the state stack on the debug stream.
@@ -1680,9 +1689,9 @@ namespace ibis {
 
 } // ibis
 /* Line 1135 of lalr1.cc  */
-#line 1615 "selectParser.cc"
+#line 1624 "selectParser.cc"
 /* Line 1136 of lalr1.cc  */
-#line 516 "selectParser.yy"
+#line 525 "selectParser.yy"
 
 void ibis::selectParser::error(const ibis::selectParser::location_type& l,
 			       const std::string& m) {
